# sodium-wrapper

./: .clang-format  CMakeLists.txt  CMakeSettings.json  LICENSE  README  README.md  main.cpp  sodiumalloc.h  sodiumauth.cpp  sodiumauth.h  sodiumcommon.h  sodiumcrypter.cpp  sodiumcrypter.h  sodiumcrypteraead.cpp  sodiumcrypteraead.h  sodiumcryptor.cpp  sodiumcryptor.h  sodiumcryptoraead.cpp  sodiumcryptoraead.h  sodiumfilecryptor.cpp  sodiumfilecryptor.h  sodiumkey.h  sodiumnonce.h  sodiumstreamcryptor.cpp  sodiumstreamcryptor.h  sodiumtester.cpp  sodiumtester.h  sodiumutils.cpp  unittest0.cpp
include/: aead.h  aead_aesgcm.h  aead_aesgcm_precomputed.h  aead_chacha20_poly1305.h  aead_chacha20_poly1305_ietf.h  aead_decrypt_filter.h  aead_encrypt_filter.h  aead_xchacha20_poly1305_ietf.h  aes_ctx.h  alloc.h  allocator.h  auth.h  auth_mac_filter.h  auth_verify_filter.h  authenticator.h  blake2b_tee_filter.h  box.h  box_precomputed.h  box_seal.h  bytestring.h  chacha20_filter.h  common.h  cryptor.h  cryptor_aead.h  cryptor_aead_decrypt_filter.h  cryptor_aead_encrypt_filter.h  cryptor_decrypt_filter.h  cryptor_encrypt_filter.h  cryptoraead.h  cryptormultipk.h  cryptorpk.h  filecryptor.h  filecryptor_aead.h  hash.h  hasher_generic.h  hasher_generic_keyless.h  hasher_short.h  hashor.h  hashor_generic.h  hashor_generic_keyless.h  (+33 more)
patches/: README  libc++-string-linux.patch  patch-libsodium-portfile.cmake.txt
src/: auth.cpp  authenticator.cpp  cryptor.cpp  cryptoraead.cpp  cryptormultipk.cpp  cryptorpk.cpp  filecryptor.cpp  hash.cpp  key.cpp  keypair.cpp  keypairsign.cpp  keyvar.cpp  sealedbox.cpp  signorpk.cpp  sodiumauth.cpp  sodiumcryptor.cpp  sodiumcryptoraead.cpp  sodiumfilecryptor.cpp  sodiumutils.cpp  streamcryptor.cpp  streamhash.cpp  streamsignorpk.cpp  streamverifierpk.cpp  utils.cpp
srctest/: main.cpp  sodiumtester.cpp  sodiumtester.h
tests/: test_Auth.cpp  test_Cryptor.cpp  test_CryptorAEAD.cpp  test_CryptorMultiPK.cpp  test_CryptorPK.cpp  test_Hash.cpp  test_HashShort.cpp  test_Key.cpp  test_KeyPair.cpp  test_KeyPairSign.cpp  test_KeyVar.cpp  test_Nonce.cpp  test_SealedBox.cpp  test_SignorPK.cpp  test_StreamHash.cpp  test_StreamSignorPK.cpp  test_aead.cpp  test_aead_filters.cpp  test_auth_filters.cpp  test_authenticator.cpp  test_blake2b_tee_filter.cpp  test_box.cpp  test_box_precomputed.cpp  test_box_seal.cpp  test_chacha20_filter.cpp  test_cryptor.cpp  test_cryptor_aead.cpp  test_cryptor_aead_filters.cpp  test_cryptor_filters.cpp  test_cryptorpk.cpp  test_hasher_generic.cpp  test_hasher_generic_keyless.cpp  test_hasher_short.cpp  test_hashor.cpp  test_hashor_generic.cpp  test_hashor_generic_keyless.cpp  test_hashor_keyless.cpp  test_hashor_short.cpp  test_helpers.cpp  test_key.cpp  (+15 more)
tools/: reformat.sh
